--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
     <table>
         <tr>
             <th>Full-Stack devlopment course</th>
-            <th>Hirasugar Institute of Technology</th>
-            <th>Visvesvaraya Technological University</th>
-            <th>71.88</th>
+            <th>Kodnest technologies</th>
+            
         </tr>
         <tr>
             <td>SSC</td>
