--- a/index.html
+++ b/index.html
@@ -46,19 +46,16 @@
         <tr>
             <td>SSC</td>
             <td>S.S (K) Patil English Mesdium School</td>
-            <td>Karnatak Secondary Education Examination Board</td>
             <td>84.48</td>
         </tr>
         <tr>
             <td>PUC</td>
             <td>SDVS's SANGHAS PU COLLEGE </td>
-            <td>PCMB</td>
             <td>69.33</td>
         </tr>
         <tr>
             <td>BE</td>
-            <td>Nidasoshi</td>
-            <td>Belgaum</td>
+            <td>Hirasugar Institute of Technology</td>
             <td>71.88</td>
         </tr>
     </table>
@@ -82,13 +79,17 @@
     <h1 class="heading"><span>Project</span></h1>
     <div class="Row">
         <div class="det">
-    <h3><span>Role: </span>Team Leader</h3>
     <h3><span>Title: </span>Accident detection and smart ambulance management
 system</h3>
     <h3><span>Description: </span>This project deals with the development of smart ambulance kit for
 real time retrieval of personal information and medical case history
 during emergency conditions using biometric verification and IOT
 based user access system. </h3>
+            <br>
+			
+			<h3><span>Title:</span>Food delivery website</h3>
+			<h3><span>Description:</span>Created responsive food delivery website using HTML&CSS</h3>
+			<h3><span>Link to view project:</span><a href="https://scintillating-hamster-7fe12f.netlify.app/">Food delivery.com</a></h3>
             </div>
 </div>
 </section>
