--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
         </tr>
         <tr>
-            <td>SSC</td>
+            <td>SSLC</td>
             <td>S.S (K) Patil English Mesdium School</td>
             <td>84.48</td>
         </tr>
